# astris

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  justfile
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  docs_improvement.yml  feature_request.yml
assets/models/base_character/: base.glb  base.ron
crates/astris_actor/: Cargo.toml
crates/astris_actor/src/: lib.rs
crates/astris_camera/: Cargo.toml
crates/astris_camera/examples/: scene.rs
crates/astris_camera/src/: lib.rs
crates/astris_character/: Cargo.toml
crates/astris_core/: Cargo.toml
crates/astris_core/src/: components.rs
crates/astris_level/: Cargo.toml
crates/astris_level/src/: lib.rs
crates/astris_map/: Cargo.toml
crates/astris_map/src/: lib.rs  systems.rs
crates/astris_monster/: Cargo.toml
crates/astris_monster/src/: lib.rs
crates/astris_player/: Cargo.toml
crates/astris_player/src/: components.rs  input.rs  lib.rs  systems.rs
game/: Cargo.toml
game/src/: main.rs
tools/gltf_to_ron/: Cargo.toml
tools/gltf_to_ron/src/: main.rs
