[package]
name = "astris_player"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { workspace = true }

leafwing-input-manager = { workspace = true }
avian3d = { workspace = true }
bevy-tnua = { workspace = true }
bevy-tnua-avian3d = { workspace = true }

astris_core = { path = "../astris_core" }
astris_actor = { path = "../astris_actor" }
